[package]
name = "rust-esp32c3-no-std"
version = "0.1.0"
authors = ["ChromaMaster <vladtel.dev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.15.0" }
hal-smartled = { package = "esp-hal-smartled", version = "0.8.0", features = ["esp32c3"]}
esp-backtrace = { version = "0.10.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", features = ["esp32c3"] }
smart-leds = "0.4.0"
